<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_video_call"
        android:icon="@drawable/ic_call_log_video_call"
        android:orderInCategory="90"
        android:title="@string/video_call"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_audio_call"
        android:icon="@drawable/ic_call_log_voice_call"
        android:orderInCategory="91"
        android:title="@string/audio_call"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_prev"
        android:icon="@drawable/ic_search_prev_arrow"
        android:orderInCategory="94"
        android:title="@string/description_previous_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/prev_loader"
        android:title="loader"
        app:showAsAction="always"
        app:actionLayout="@layout/search_bar_loader_layout"/>

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_search_next_arrow"
        android:orderInCategory="95"
        android:title="@string/description_next_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/next_loader"
        android:title="loader"
        app:showAsAction="always"
        android:orderInCategory="96"
        app:actionLayout="@layout/search_bar_loader_layout"/>
</menu>