<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.contusfly.quickShare.FilesDialogFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/unsuppoted_files"
        android:textColor="@color/invalid_red"
        android:textSize="@dimen/text_size_20" />

    <com.contusfly.views.CustomRecyclerView
        android:id="@+id/fileList"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        tools:listitem="@layout/row_file_dialog_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_all"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</LinearLayout>
